# workshop_pytest

./: README.md  pyproject.toml
meu_modulo/: arm.py  classe_abstrata.py  gripper.py  pick_and_place.py  real.py  utils.py
tests/: conftest.py  test_arm.py  test_gripper.py
